OP-105 Fixing alignment of the dropzone icons (should have been centered)
[skip ci]

--- a/system/assets/css/admin/core/core.less.css
+++ b/system/assets/css/admin/core/core.less.css
@@ -24922,6 +24922,9 @@ img.presidecms .editable-click:hover {
 .presidecms .asset-upload-dropzone .upload-instructions * {
   cursor: pointer;
 }
+.presidecms .asset-upload-dropzone .dz-message {
+  text-align: center;
+}
 .presidecms .asset-upload-dropzone .dz-message .upload-buttons {
   display: none;
 }
